Convert DialobProgram to record